--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.5
   shared_preferences: ^0.5.10
+  twitter_api: ^0.1.2
 
 dev_dependencies:
   flutter_test:
